# courier-website

./: LICENSE.txt  MANIFEST.in  README.md  README.rst  setup.cfg
courier/: 3.2.13
courier/mainsite/: settings.py  urls.py
courier/users/: admin.py  decorators.py  filters.py  forms.py  models.py  urls.py  views.py
courier/users/migrations/: 0001_initial.py  0002_alter_transaction_tracking_number.py  0003_alter_transaction_tracking_number.py  0004_alter_transaction_tracking_number.py
courier/users/static/users/styles/: admin_styles.css  base.css  base2.css  styles2.css
courier/users/templates/users/: footer.html  header.html  login_register.html  main.html  reports_individual_pdf.html  reports_pdf.html  sidebar.html  user_dashboard.html  user_profile.html  user_transaction.html
courier/users/templates/users/Delivery_AND_Courier/: Courier_Partner.html  Delivery_Partner.html  main.html  tracking.html
courier/users/templates/users/Home_links/: Modals.html  header.html  section.html
courier/users/templates/users/admin/: admin_courierP.html  admin_dashboard.html  admin_deliveryP.html  admin_main.html  admin_sidebar.html  admin_usersT.html
courier/users/templates/users/admin/Add_Users/: add_courierP.html  add_deliveryP.html  add_user.html  admin_profile.html  admin_transaction.html
django_courier.egg-info/: PKG-INFO  SOURCES.txt
