[metadata]
name = django-courier
version = 0.1
description = A Django app use for Web-based courier services.
long_description = file: README.rst
author = Eugene M. Reyes, Jecko Sayo, Peter Lemuel Zamora 
author_email = reyes.eugene@ue.edu.ph, sayo.jecko@ue.edu.ph, zamora.peterlemuel@ue.edu.ph
classifiers =
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.2
	Intended Audience :: Developer and Users
	Operating System :: OS independent
	Programming Language :: Python 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = 
	Django >= 3.2


